# hexalyzer

./: .gitignore  Cargo.toml  LICENSE  README.md  bench.sh  check.sh  test.sh
hexalyzer/: Cargo.toml  build.rs
hexalyzer/assets/: hexalyzer.afdesign  icon.icns  icon_mac.rgba  icon_win.rgba
hexalyzer/assets/hexalyzer.icon/: icon.json
hexalyzer/src/: app.rs  byteedit.rs  clipboard.rs  events.rs  hexdiff.rs  hexview.rs  loader.rs  main.rs  selection.rs  ui_button.rs  ui_centralpanel.rs  ui_converter.rs  ui_filedrop.rs  ui_inspector.rs  ui_jumpto.rs  ui_menubar.rs  ui_popup.rs  ui_scrollarea.rs  ui_search.rs  ui_sidepanel.rs  ui_tabs.rs
hexalyzer/utils/: make_icons.sh
hexviewer/: Cargo.toml
hexviewer/src/: editor.rs  error.rs  hexviewer.rs  inspector.rs  main.rs  selection.rs  topbar.rs  ui_error.rs  ui_events.rs  ui_fileinfo.rs  ui_inspector.rs  ui_topbar.rs  ui_workspace.rs  update.rs  workspace.rs
intelhex/: Cargo.toml
intelhex/src/: error.rs  intelhex.rs  lib.rs  record.rs
intelhex/tests/: integration.rs  integration_tests.rs
intelhex/tests/fixtures/: ih_bad_chechsum.hex
intelhexlib/: Cargo.toml
intelhexlib/benches/: benchmark.rs  createbin.sh
intelhexlib/src/: error.rs  intelhex.rs  lib.rs  record.rs  search.rs
intelhexlib/tests/: cli_tests.rs  integration_tests.rs
intelhexlib/tests/fixtures/: ih_valid_2.hex
src/: main.rs
src/lib/: ih.rs
tests/: integration.rs
tests/fixtures/: ih_example_3.hex
