[workspace]
members = [
    "intelhexlib",
    "hexalyzer",
]
default-members = ["hexalyzer"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["Ihar Hlukhau | ihluk@outlook.com"]
license = "MIT"
description = "Intel HEX parser & hex viewer GUI"
repository = "https://github.com/iharhl/hexalyzer"

[workspace.dependencies]
intelhexlib = { path = "intelhexlib" }
eframe = { version = "0.34.3", default-features = false }
rfd = "0.17.2"

[profile.bench]
inherits = "release"
lto = true
codegen-units = 1