[package]
name = "hexalyzer"
version = "0.3.0"
edition = "2024"

[dependencies]
rfd.workspace = true
intelhexlib.workspace = true
# On Windows: use lightweight 'glow' (OpenGL) backend
[target.'cfg(windows)'.dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow"] }
# On Mac/Linux: use 'default' features
[target.'cfg(not(windows))'.dependencies]
eframe = { workspace = true, features = ["default"] }

[build-dependencies]
winresource = "0.1.28"

[package.metadata.packager]
product_name = "Hexalyzer"
identifier = "com.github.iharhl.hexalyzer"
description = "IntelHex viewer and editor app"
authors = ["Ihar Hlukhau | ihluk@outlook.com"]
copyright = "Copyright © 2026"
# Icons for MacOS, Windows and a fallback PNG
icons = ["assets/icon.icns", "assets/icon.ico", "assets/icon_128x128_win.png"]

[package.metadata.packager.nsis]
installer_mode = "perMachine"
