[package]
name = "intelhexlib"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "intelhexlib"
path = "src/lib.rs"

[[bin]]
name = "ihex"
path = "bin/ihex.rs"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand = "0.9.2"

[features]
benchmarking = []

[[bench]]
name = "benchmark"
harness = false
path = "benches/benchmark.rs"

[dependencies]
regex = "1.12.2"
